# scoreboard-engine

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE.md  README.md
.github/workflows/: release.yaml
companion-module-scoreboard-engine/: .gitignore  README.md  package.json
companion-module-scoreboard-engine/companion/: manifest.json
companion-module-scoreboard-engine/src/: actions.js  feedbacks.js  main.js  variables.js
companion-module-scoreboard-scoreboard/: package.json
companion-module-scoreboard-scoreboard/companion/: manifest.json
companion-module-scoreboard-scoreboard/src/: variables.js
companion-module-soreboard-scoreboard/: .gitignore  README.md  package.json
companion-module-soreboard-scoreboard/companion/: manifest.json
companion-module-soreboard-scoreboard/src/: actions.js  config.js  feedbacks.js  main.js  variables.js
engine/: CHANGELOG.md  Cargo.toml  README.md  config.xml
engine/.github/workflows/: release.yaml
engine/pages/: README.md  examples.css  test.html
engine/src/: index.html  main.rs  scoreboard.js
examples/: AFL.companionconfig  ExamplePage.companionconfig  README.md  RugbyLeague.companionconfig  afl-config.xml  rugby-league-config.xml
examples/afl/: AFL.companionconfig  README.md  afl-config.xml  scorebug.html
examples/basketball/: Basketball.companionconfig  README.md  basketball-config.xml  fullscreen.html  scorebug.html
examples/netball/: NetallExample.companionconfig  README.md  netball-config.xml  scorebug.html
examples/rugbyleague/: README.md  RugbyLeague.companionconfig  rugbyleague-config.xml
