[package]
name = "scoreboard-engine"
version = "0.5.3"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
chrono = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
roxmltree = "0.20"
clap = { version = "4.0", features = ["derive"] }
get_if_addrs = "0.5"
